--- a/webapps/nexcarlos-recommendation/package.json
+++ b/webapps/nexcarlos-recommendation/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "4.10.0",
+    "@material-ui/icons": "4.9.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
-    "@material-ui/core": "4.10.0",
-    "@material-ui/icons": "4.9.1",
     "classnames": "2.2.6",
     "history": "4.10.1",
     "moment": "2.26.0",
@@ -17,8 +17,9 @@
     "react": "16.13.1",
     "react-datetime": "2.16.3",
     "react-dom": "16.13.1",
+    "react-parallax": "^3.2.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.2",
     "react-slick": "0.26.1",
     "react-swipeable-views": "0.13.9"
   },
